# nudgebee

./: .gitignore  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  Makefile  NOTICE  OSS_DROP.md  README.md  RUNNER.md  SECURITY.md  TRADEMARKS.md  docker-compose.yaml  dynakube-ksm-otel.yaml  gc_kb_api.postman_collection.json
collector-server/k8s-collector/app/: .env.example  .flake8  .gitignore  .mypy.ini  Dockerfile  Makefile  README.md  app.py  pyproject.toml
collector-server/k8s-collector/app/apis/: exceptions.py  register_urls.py  routes.py
collector-server/k8s-collector/app/config/: __init__.py  logging.json  popeye-rules.json
collector-server/k8s-collector/app/controllers/: auto_pilot_controller.py  base.py  discovery_controller.py  event_controller.py  open_cost_controller.py  opencostatributes.py  playbook_controller.py  spend_controller.py  task_controller.py  telemetry_controller.py
collector-server/k8s-collector/app/db/: clickhouse.py  database.py  redis_client.py
llm/benchmark/: .dockerignore  .env.example  .flake8  .gitignore  .mypy.ini  AWS_AGENT_FAILURE_REPORT.md  Benchmark-Server-API.postman_collection.json  Dockerfile  Makefile  README.md  app.py  pyproject.toml
llm/benchmark/.streamlit/: config.toml
llm/benchmark/benchmark_server/: orchestrator.py  postman_collection.json
llm/benchmark/tbench/: README.md  baseline_report.md  nubi_agent.py  run.sh
llm/rag-server/: .dockerignore  .gitignore  .mypy.ini  Dockerfile  Makefile  POSTMAN_GUIDE.md  RAG-Server-API.postman_collection.json  README.md  entrypoint.sh  pyproject.toml  server.py
llm/rag-server/config/: __init__.py  logging.json
llm/rag-server/controllers/: cache_controller.py  collection_controller.py  document_controller.py  knowledgebase_controller.py  migration_controller.py  search_controller.py
llm/rag-server/data/: aws.csv  es.json  events.json  gcloud.csv  github.json  loki.csv  mysql.json  planner.json  planner_aws.json  postgresql.json  prometheus.csv  prometheus_metric_metadata.json  prometheus_metric_metadata_kube_state_metrics.json  prometheus_metric_metadata_kubelet.json  prometheus_metric_metadata_node_exporter.json  rabbitmq.csv  recommendation.json  traces.json
llm/rag-server/docs/: DOCUMENT_LOADING_OPTIMIZATIONS.md  FLASK_TO_FASTAPI_MIGRATION.md  FOLDER_STRUCTURE_RECOMMENDATIONS.md  METADATA_FILTERING.md  MIGRATION_GUIDE.md  QDRANT_MIGRATION_GUIDE.md  README.md  SEARCH_OPTIMIZATIONS.md  STANDALONE_QDRANT_DEPLOYMENT.md  VECTOR_DB_ARCHITECTURE.md
llm/rag-server/rag/: __init__.py  exceptions.py  vector_store.py
llm/rag-server/scripts/: memory_test.py
llm/rag-server/utils/: config.py  shared.py
ml-k8s-server/: .flake8  .mypy.ini  ANOMALY_DETECTION.md  Dockerfile  Makefile  README.md  gunicorn.conf.py  pyproject.toml
ml-k8s-server/server/: __init__.py  app.py  exception.py  logging.json  message.py  worker.py
ml-k8s-server/server/anomaly/: evaluation_data_set.json
ml-k8s-server/server/controllers/: anomaly.py  health.py  metrics.py  prediction.py  rightsizing.py
ml-k8s-server/server/metrics/: database_metrics.py  metrics.py  prometheus_metrics.py  prometheus_metrics_hpa.py  prometheus_queries.py
ml-k8s-server/server/model/: hpa_model.py  models.py  vpa_model.py
ml-k8s-server/server/model_store/: awss3_store.py  file_store.py  modelstore.py
ml-k8s-server/server/predictions_store/: prediction_db_store.py  prediction_store.py
ml-k8s-server/server/recommendation/: cluster_rightsizing_recommendation.py  recommendation.py  recommendation_db.py  volume_rightsizing.py
ml-k8s-server/server/resource_models/: constants.py  k8s_resources.py  resource.py  utils.py
ml-k8s-server/server/utils/: rabbitmq.py  utils.py
ml-k8s-server/tests/: TestAnomaly.py  TestPredictions.py
ml-k8s-server/tests/anomaly/: __init__.py  conftest.py  retest_from_json.py  test_algorithms.py  test_evaluation.py  test_scenarios.py
notifications-server/: .env.example  .flake8  .gitignore  Dockerfile  Dockerfile_tests  Makefile  README.md  pyproject.toml
notifications-server/notifications_server/: __init__.py  server.py
notifications-server/notifications_server/clients/: google_chat_app_client.py  google_chat_client.py  ms_teams_client.py  slack_client.py
notifications-server/notifications_server/configs/: __init__.py  logging.json  settings.py
notifications-server/notifications_server/emailer/: __init__.py  generator.py  sender.py  template_params.py
notifications-server/notifications_server/exceptions/: __init__.py  common_exc.py  exceptions.py  notification_errors.py
notifications-server/notifications_server/message_templates/: __init__.py  base.py  blocks.py
notifications-server/notifications_server/models/: db_base.py  db_factory.py  db_postgres.py  enums.py  models.py
notifications-server/notifications_server/processors/: base.py  email.py  factory.py  notification.py
notifications-server/notifications_server/rabbitmq/: message_consumer.py
notifications-server/notifications_server/repositories/: __init__.py  account_repository.py  oauth_repository.py  operations_repository.py  user_repository.py
notifications-server/notifications_server/routers/: actions.py  common.py  llm_callbacks.py  tools.py
notifications-server/notifications_server/schemas/: __init__.py  message.py
notifications-server/notifications_server/services/: actions.py  actions_common.py  audit.py  bot_messages.py  cache.py  common.py  events.py  message.py  response_helpers.py  rules.py
notifications-server/notifications_server/utils/: action_requests.py  cache_util.py  callbacks.py  datetime_utils.py  documented_pydantic.py  encode_utils.py  evidence.py  feature_flag_utils.py  transformer.py  user_util.py
notifications-server/tests/: test_budget_exceeded_message.py  test_cache_util.py  test_email_cc_bcc.py  test_encode_utils.py  test_followup_keys_cleared.py  test_generic_workflow_footer.py  test_notification_rule_matching.py  test_optimization_notifications.py  test_rules_mapping_removal.py
(+7924 files in other folders)
