[tool.poetry]
name = "k8s-scaling"
version = "0.1.0"
description = ""
authors = ["Nudgebee <dev@nudgebee.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
python-dotenv = "^1.0.0"
flask = "^3.1.3"
prometheus-api-client = "^0.5.4"
pandas = "^2.1.4"
numpy = "^1.26.2"
gunicorn = "23.0.0"

# stubs
boto3-stubs = "1.42.84"
pandas-stubs = "2.0.3.230814"
types-tensorflow = "2.12.0.10"
sqlalchemy-stubs = "0.4"
types-requests = "2.33.0.20260503"
python-json-logger = "^2.0.7"
boto3 = "^1.34.53"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
keras = "^3.10.0"
tensorflow = "^2.20.0"
scikit-learn = "^1.4.1.post1"

opentelemetry-api = "^1.27.0"
opentelemetry-sdk = "^1.40.0"
opentelemetry-exporter-otlp = "^1.27.0"
opentelemetry-instrumentation-system-metrics = "^0.48b0"
pydantic = "^2.10.3"
kombu = "^5.4.2"
kubernetes = "^26.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.5.1"
black = "26.5.0"
mypy = "1.5.1"
flake8 = "7.3.0"


[tool.poetry.group.extras.dependencies]
pulp = "2.8.0"

[tool.mypy]
namespace_packages = true

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | \.ml-env
  | _build
  | buck-out
  | build
  | dist
  | notebooks
)/
'''
