[project]
name = "benchmark"
version = "0.1.0"
description = "Benchmarking server for LLM and RAG systems"
authors = [
    { name = "Nudgebee", email = "dev@nudgebee.com" },
    { name = "Contributors" },
]
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.4",
    "aiofiles==24.1.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "appdirs==1.4.4",
    "async-timeout==4.0.3",
    "attrs==25.3.0",
    "azure-ai-inference==1.0.0b9",
    "azure-core==1.38.0",
    "azure-core-tracing-opentelemetry==1.0.0b12",
    "azure-cosmos>=4.14.0b1",
    "azure-identity==1.23.0",
    "black==26.3.1",
    "boto3>=1.39.7",
    "botocore>=1.39.7",
    "bottleneck==1.5.0",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==2.0.0",
    "cfgv==3.4.0",
    "charset-normalizer==3.4.6",
    "click==8.2.1",
    "colorama==0.4.6",
    "cryptography==46.0.7",
    "dataclasses-json==0.6.7",
    "datasets==3.6.0",
    "deprecated==1.2.18",
    "dill==0.3.8",
    "diskcache==5.6.3",
    "distlib==0.3.9",
    "distro==1.9.0",
    "docstring-parser==0.16",
    "exceptiongroup==1.3.1",
    "fastapi==0.135.3",
    "filelock==3.20.3",
    "filetype==1.2.0",
    "flake8==6.1.0",
    "frozenlist==1.8.0",
    "fsspec==2025.3.0",
    "google-ai-generativelanguage>=0.11.0",
    "google-api-core==2.24.2",
    "google-auth>=2.47.0",
    "google-cloud-aiplatform>=1.148.1",
    "google-cloud-bigquery==3.34.0",
    "google-cloud-core==2.4.3",
    "google-cloud-resource-manager==1.14.2",
    "google-cloud-storage==2.19.0",
    "google-crc32c==1.7.1",
    "google-genai>=1.53.0",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.2",
    "grpc-google-iam-v1==0.14.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.0",
    "huggingface-hub==0.32.3",
    "identify==2.6.12",
    "idna==3.15",
    "importlib-metadata==8.6.1",
    "iniconfig==2.1.0",
    "isodate==0.7.2",
    "jiter==0.10.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpointer==3.1.1",
    "langchain>=0.3.27",
    "langchain-aws>=1.2.0",
    "langchain-azure-ai>=1.1.0",
    "langchain-community>=0.3.27",
    "langchain-core>=1.2.0",
    "langchain-google-genai>=2.1.5",
    "langchain-google-vertexai>=2.0.24",
    "langchain-ollama>=0.3.3",
    "langchain-openai>=1.1.15",
    "langchain-text-splitters==1.1.2",
    "langsmith==0.8.0",
    "marshmallow==3.26.2",
    "mccabe==0.7.0",
    "msal==1.32.3",
    "msal-extensions==1.3.1",
    "multidict==6.7.1",
    "multiprocess==0.70.16",
    "mypy==1.5.1",
    "mypy-extensions==1.1.0",
    "nest-asyncio==1.6.0",
    "nodeenv==1.9.1",
    "numexpr==2.14.1",
    "numpy>=2.1.0",
    "ollama>=0.5.3",
    "openai>=1.86.0",
    "opentelemetry-api==1.33.1",
    "opentelemetry-distro==0.54b1",
    "opentelemetry-exporter-otlp==1.33.1",
    "opentelemetry-exporter-otlp-proto-common==1.33.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.33.1",
    "opentelemetry-exporter-otlp-proto-http==1.33.1",
    "opentelemetry-instrumentation==0.54b1",
    "opentelemetry-proto==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "opentelemetry-semantic-conventions==0.54b1",
    "orjson==3.11.8",
    "packaging==24.2",
    "pandas==2.2.3",
    "pathspec>=1.0.0",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pre-commit==3.4.0",
    "propcache==0.3.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.6",
    "psycopg2-binary>=2.9.10",
    "pyarrow==19.0.1",
    "pyasn1==0.6.3",
    "pyasn1-modules==0.4.2",
    "pycodestyle==2.11.1",
    "pycparser==2.22",
    "pydantic==2.11.5",
    "pydantic-core==2.33.2",
    "pydantic-settings>=2.13.1",
    "pyflakes==3.1.0",
    "pyjwt==2.10.1",
    "pytest==9.0.3",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.0",
    "python-json-logger==3.3.0",
    "python-multipart>=0.0.18",
    "pytz==2026.1.post1",
    "pyyaml==6.0.2",
    "ragas==0.3.0rc2",
    "regex==2024.11.6",
    "requests>=2.32.5",
    "requests-toolbelt==1.0.0",
    "rsa==4.9.1",
    "s3transfer>=0.16.0",
    "shapely==2.1.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "starlette==0.49.1",
    "tenacity==9.1.2",
    "tiktoken==0.9.0",
    "tomli==2.2.1",
    "tqdm==4.67.1",
    "types-requests==2.32.0.20250515",
    "typing-extensions==4.15.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.7.0",
    "uvicorn==0.34.3",
    "validators==0.35.0",
    "virtualenv==20.36.1",
    "websockets==15.0.1",
    "wrapt==1.17.2",
    "xxhash==3.6.0",
    "yarl==1.20.0",
    "zipp==3.23.0",
    "zstandard==0.23.0",
    "streamlit>=1.40.0",
    "terminal-bench>=0.2.18",
]

[tool.setuptools.packages.find]
include = ["llm*", "rag*", "server*"]
