[tool.poetry]
name = "collector-server"
version = "0.1.0"
description = "k8s data collector"
authors = ["Mayank Pande <mayankpande88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "10.0.1"
apscheduler = "3.10.0"
asttokens = "3.0.1"
attrs = "26.1.0"
backcall = "0.2.0"
certifi = "2026.4.22"
charset-normalizer = "3.1.0"
click = "8.3.3"
decorator = "5.2.1"
distlib = "0.4.0"
dnspython = "2.8.0"
executing = "2.2.1"
filelock = "3.29.0"
flask = "^3.1.3"
flask-restx = "1.3.0"
idna = "3.15"
importlib-metadata = "6.1.0"
importlib-resources = "7.1.0"
ipdb = "0.13.13"
ipython = "8.11.0"
itsdangerous = "^2.2.0"
jedi = "0.18.2"
jinja2 = "3.1.6"
jmespath = "1.0.1"
jsonschema = "4.17.3"
markupsafe = "3.0.3"
matplotlib-inline = "0.1.6"
parso = "0.8.3"
pexpect = "4.9.0"
pickleshare = "0.7.5"
pkgutil-resolve-name = "1.3.10"
platformdirs = "4.9.4"
prompt-toolkit = "3.0.38"
ptyprocess = "0.7.0"
pure-eval = "0.2.3"
pycryptodome = "3.19.1"
pycryptodomex = "3.23.0"
pygments = "^2.20.0"
pyrsistent = "0.19.3"
python-dateutil = "2.9.0.post0"
pytz = "2026.2"
pytz-deprecation-shim = "0.1.0.post0"
requests = "2.33.1"
six = "1.16.0"
stack-data = "0.6.2"
tomli = "2.4.1"
tornado = "6.5.5"
traitlets = "5.14.3"
tzdata = "2026.2"
tzlocal = "5.3.1"
urllib3 = "^2.6.3"
virtualenv = "20.36.1"
wcwidth = "0.6.0"
werkzeug = "3.1.6"
zipp = "3.23.1"
gunicorn = "25.3.0"
python-json-logger = "2.0.7"
kombu = "5.4.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.9.1"
python-dotenv = "1.2.2"
tabulate = "^0.10.0"
types-psycopg2 = "^2.9.5"
clickhouse-connect = "^0.9.1"
beautifulsoup4 = "^4.12.3"
bcrypt = "^4.2.0"
psycopg2-binary = "^2.9.11"
prometheus-client = "0.24.1"
cachetools = ">=5.3"
redis = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.4.0"
black = "26.3.1"
mypy = "1.20.0"
flake8 = "7.3.0"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \**venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
exclude = '''.venv
'''
