[tool.poetry]
name = "collector-server"
version = "0.1.0"
description = "k8s data collector"
authors = ["Nudgebee <dev@nudgebee.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aniso8601 = "10.0.1"
apscheduler = "3.11.2"
attrs = "26.1.0"
certifi = "2026.5.20"
charset-normalizer = "3.1.0"
click = "8.3.3"
distlib = "0.4.0"
dnspython = "2.8.0"
filelock = "3.29.1"
flask = "^3.1.3"
flask-restx = "1.3.0"
idna = "3.18"
importlib-metadata = "9.0.0"
importlib-resources = "7.1.0"
itsdangerous = "^2.2.0"
jinja2 = "3.1.6"
jmespath = "1.1.0"
jsonschema = "4.26.0"
markupsafe = "3.0.3"
pkgutil-resolve-name = "1.3.10"
platformdirs = "4.9.4"
pycryptodome = "3.23.0"
pycryptodomex = "3.23.0"
pygments = "^2.20.0"
pyrsistent = "0.20.0"
python-dateutil = "2.9.0.post0"
pytz = "2026.2"
pytz-deprecation-shim = "0.1.0.post0"
requests = "2.34.2"
tomli = "2.4.1"
tornado = "6.5.5"
tzdata = "2026.2"
tzlocal = "5.3.1"
urllib3 = "^2.6.3"
virtualenv = "21.3.3"
werkzeug = "3.1.8"
zipp = "4.1.0"
gunicorn = "26.0.0"
python-json-logger = "4.1.0"
kombu = "5.6.2"
pydantic = "^2.12.5"
pydantic-settings = "^2.9.1"
python-dotenv = "1.2.2"
tabulate = "^0.10.0"
types-psycopg2 = "^2.9.5"
clickhouse-connect = "^0.9.1"
beautifulsoup4 = "^4.12.3"
bcrypt = ">=4.2,<6.0"
psycopg2-binary = "^2.9.11"
prometheus-client = "0.25.0"
cachetools = ">=5.3"
redis = ">=7.4,<9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pre-commit = "4.6.0"
black = "26.5.1"
mypy = "2.1.0"
flake8 = "7.3.0"
ipython = "8.11.0"
ipdb = "0.13.13"

[tool.black]
line-length = 120
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \**venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.flake8]
exclude = '''.venv
'''
